--- a/app/Main/main.css
+++ b/app/Main/main.css
@@ -632,6 +632,16 @@
     position: relative;
     border-radius: 25px;
     overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #fff;
+}
+
+.seven-image {
+    width: auto;
+    height: 100%;
+    object-fit: contain;
 }
 
 .seven-content-right {
@@ -748,6 +758,99 @@
  
 
 /* 9 */
+
+.nine {
+    padding: 0 7.5vw;
+    height: 100vh;
+    position: relative;
+    overflow: visible;
+    padding-bottom: 7.5vh;
+    padding-top: 15vh;
+}
+
+.nine-content {
+    display: flex;
+    flex-direction: row;
+    gap: 10vw;
+    padding: 15vh 0;
+}
+
+.nine-content-left {
+    width: 30%;
+    display: flex;
+    flex-direction: column;
+    gap: 15vh;
+}
+
+.nine-content-left-bottom {
+    display: flex;
+    flex-direction: column;
+    gap: 5vh;
+}
+
+.nine-content-left-item {
+    display: flex;
+    flex-direction: column;
+    gap: 1vh; 
+}
+
+.nine-content-right {
+    width: 70%;
+}
+
+.form-group {
+}
+
+.form-divider {
+    width: 100%;
+    height: 1px;
+    background-color: #ffffff35;
+}
+
+input {
+    font-family: "Poppins", sans-serif;
+    width: 100%;
+    height: 10vh;
+    padding: 0;
+    box-sizing: border-box;
+    background-color: transparent;
+    border: none;
+    font-size: 1.5vw;
+    margin: 0;
+    padding-left: 1vw;
+    font-weight: 300;
+    line-height: 110%;
+    color: #ffffff35;
+    border-bottom: 1px solid #ffffff35;
+    transition: border-color 0.3s;
+}
+
+input:focus {
+    outline: none;
+    border-color: #5eafff;
+  }
+
+input::placeholder {
+    color: #ffffff35;
+}
+
+.form-button {
+    width: 5vw;
+    height: 5vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-right: 0.5vw;
+    border-radius: 999px;
+    cursor: pointer;
+    position: relative;
+    border: none;
+    background-color: white;
+    color: #010101;
+    margin-top: 4vh;
+}
+
+/* FOOTER */
 
 .footer {
     width: fit-content;
