--- a/app/Main/main.css
+++ b/app/Main/main.css
@@ -613,7 +613,7 @@
 .seven-border {
     height: 310vh;
     width: 1px;
-    background-color: grey;
+    background-color: rgba(255, 255, 255, 0.075);
     margin-top: 5vh;
 }
 
@@ -675,7 +675,7 @@
     padding-top: 7.5vh;
 }
 
-.four-slider-content {
+.eight-slider-content {
     width: 100%;
     height: fit-content;
     display: flex;
@@ -683,7 +683,7 @@
     position: relative;
 }
 
-.four-slider-overlay {
+.eight-slider-overlay {
     width: 100%;
     height: 100%;
     position: absolute;
@@ -697,17 +697,17 @@
     justify-content: center;
 }
 
-.four-slider-icon {
+.eight-slider-icon {
     color: white;
     width: 0.85vw;
     height: 0.85vw;
 }
 
-.four-slider-content:hover .four-slider-overlay {
+.eight-slider-content:hover .eight-slider-overlay {
     opacity: 1;
 }
 
-.four-slider {
+.eight-slider {
     overflow: hidden;
     letter-spacing: 0;
     line-height: 1.5;
@@ -717,23 +717,26 @@
     flex-wrap: nowrap;
 }
   
-.four-slider-inside {
+.eight-slider-inside {
     display: flex;
     white-space: nowrap;
     display: flex;
     flex-wrap: nowrap;
 }
 
-.four-slider-item {
-    height: 7.5vh;
-    width: fit-content;
+.eight-slider-item {
+    height: 15vw;
+    width: 15vw;
     margin-right: 5vw;
+    background-color: white;
+    padding: 2.5vw;
+    border-radius: 100%;
 }
 
-.four-slider-item-image {
+.eight-slider-item-image {
     height: 100%;
-    width: fit-content;
-    object-fit: cover;
+    width: 100%;
+    object-fit: contain;
     opacity: 1;
 }
 
@@ -763,7 +766,7 @@
     padding: 0 7.5vw;
     height: 100vh;
     position: relative;
-    overflow: visible;
+    overflow: hidden;
     padding-bottom: 7.5vh;
     padding-top: 15vh;
 }
@@ -792,6 +795,19 @@
     display: flex;
     flex-direction: column;
     gap: 1vh; 
+}
+
+.nine-content-left-item-column {
+    display: flex;
+    flex-direction: column;
+    gap: 1vh;
+}
+
+.nine-content-left-item-column-text {
+    display: flex;
+    line-height: 110%;
+    text-decoration: none;
+    color: #ffffff35;
 }
 
 .nine-content-right {
@@ -835,8 +851,8 @@ input::placeholder {
 }
 
 .form-button {
-    width: 5vw;
-    height: 5vh;
+    width: 100%;
+    height: 2.75vw;
     display: flex;
     align-items: center;
     justify-content: center;
