--- a/app/globals.css
+++ b/app/globals.css
@@ -32,13 +32,14 @@ body {
 .main-sections {
   display: flex;
   flex-direction: column;
-  gap: 30vh;
+  /* gap: 15vh; */
 }
 
 .section-border {
   width: 100%;
   height: 1px;
   background-color: #ffffff35;
+  align-self: center;
 }
 
 .button {
