--- a/app/Main/accordion.css
+++ b/app/Main/accordion.css
@@ -17,7 +17,7 @@
     align-items: center;
     justify-content: space-between;
     transition: 0.6s ease;
-    border-bottom: 1px solid white;
+    border-bottom: 1px solid #ffffff35;
   }
 
   .accordion:hover {
