--- a/app/Main/main.css
+++ b/app/Main/main.css
@@ -391,7 +391,7 @@
 
 .four-textbox {
     align-items: center;
-    text-align: ce;
+    text-align: center;
 }
 
 .four-content-row {
@@ -407,7 +407,7 @@
     width: 100%;
     height: 30vh;
     border-radius: 15px;
-    /* background-color: rgba(255, 255, 255, 0.075); */
+    background-color: transparent;
 }
 
 .four-content-item-box {
@@ -592,6 +592,10 @@
     overflow: visible;
 }
 
+.seven-mobile {
+    display: none;
+}
+
 .seven-content {
     display: flex;
     flex-direction: column;
@@ -771,6 +775,10 @@
     padding-top: 15vh;
 }
 
+.nine-mobile {
+    display: none;
+}
+
 .nine-content {
     display: flex;
     flex-direction: row;
@@ -812,9 +820,6 @@
 
 .nine-content-right {
     width: 70%;
-}
-
-.form-group {
 }
 
 .form-divider {
@@ -918,9 +923,9 @@ input::placeholder {
 /* 1 */
 
 .one {
-    height: 200vw;
+    height: 225vw;
     width: 100%;
-    padding-top: 40vw;
+    padding-top: 42.5vw;
     overflow: hidden;
 }
 
@@ -936,12 +941,12 @@ input::placeholder {
 }
 
 .one-image {
-    height: 110vw;
+    height: 125vw;
 }
 
 .one-image-trigger {
-    top: 150vw;
-    height: 200vw;
+    top: 210vw;
+    height: 100vw;
 }
 
 .one-item-changing-text {
@@ -999,26 +1004,23 @@ input::placeholder {
 .two-content-left {
     width: 100%;
     height: fit-content;
-    display: flex;
-    flex-direction: column;
     justify-content: center;
+    align-items: center;
+    text-align: center;
     gap: 5vw;
 }
 
-.two-button {
-    width: 100%;
-    height: 7.5vw;
-    display: flex;
+.two-textbox {
+    justify-content: center;
     align-items: center;
-    justify-content: space-between;
+    text-align: center;
+}
+
+.two-button {
+    width: 90%;
+    height: 7.5vw;
     padding: 0 2.5vw;
     padding-right: 1.5vw;
-    border-radius: 999px;
-    cursor: pointer;
-    position: relative;
-    border: none;
-    background-color: white;
-    color: #010101;
 }
 
 .two-circle-button {
@@ -1043,7 +1045,7 @@ input::placeholder {
     height: 100vw;
     display: flex;
     flex-direction: row;
-    transform: rotate(27.5deg) translateY(-30vh) translateX(2.5vw);
+    transform: rotate(27.5deg) translateY(0) translateX(2.5vw);
 }
 
 .two-carousel {
@@ -1059,16 +1061,13 @@ input::placeholder {
 }
 
 .two-row {
-    display: flex;
-    touch-action: pan-x pinch-zoom;
-    height: 150vh;
-    flex-direction: column;
+    height: 300vw;
 }
 
 .two-item {
     flex: 0 0 40vw;
     height: 80vw;
-    padding: 2vh 0;
+    padding: 0;
     cursor: pointer;
     transition: background-color 0.35s ease;
 }
@@ -1080,41 +1079,72 @@ input::placeholder {
 }
 
 .bottom-fade {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 10vh;
-    background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, #010101 100%);
-    z-index: 1;
+    height: 10vw;
 }
-
 .top-fade {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 10vh;
-    background: linear-gradient(to top, rgba(255, 255, 255, 0) 0%, #010101 100%);
-    z-index: 1;
+    height: 10vw;
 }
 .left-fade {
-    position: absolute;
-    top: 0;
-    left: 0;
     width: 10vw;
-    height: 100%;
-    background: linear-gradient(to left, rgba(255, 255, 255, 0) 0%, #010101 100%);
-    z-index: 1;
 }
 .right-fade {
-    position: absolute;
-    top: 0;
-    right: 0;
     width: 10vw;
-    height: 100%;
-    background: linear-gradient(to right, rgba(255, 255, 255, 0) 0%, #010101 100%);
-    z-index: 1;
+}
+
+/* 3 */
+
+.three {
+    height: fit-content;
+    width: 100%;
+    padding: 0 5vw;
+}
+
+.three-content {
+    padding-bottom: 25vw;
+}
+
+.three-image {
+    width: 5vw;
+    height: 5vw;
+}
+
+.three-image-3 {
+    width: 15vw;
+}
+
+/* 4 */
+
+.four {
+    padding: 0 5vw;
+    padding-top: 25vw;
+    height: fit-content;
+    gap: 25vw;
+}
+
+.four-content {
+    gap: 10vw;
+}
+
+.four-textbox {
+    padding: 0 10vw;
+}
+
+.four-content-row {
+    display: flex;
+    flex-direction: column;
+    gap: 2.5vw;
+}
+
+.four-content-item {
+    width: 100%;
+    height: 25vw;
+    background-color: rgba(255, 255, 255, 0.075);
+}
+
+.four-divider {
+    height: 1px;
+    width: 100%;
+    display: none;
 }
 
 /* 5 */
@@ -1127,13 +1157,14 @@ input::placeholder {
     display: flex;
     flex-direction: column;
     padding: 0;
-    padding-top: 5vw;
+    padding-top: 25vw;
     gap: 5vw;
     height: fit-content;
 }
 
 .five-mobile-textbox {
     padding: 0 5vw;
+    text-align: center;
 }
 
 .five-mobile-row {
@@ -1164,18 +1195,18 @@ input::placeholder {
     height: 100%;
     display: flex;
     flex-direction: column;
-    gap: 2.5vh;
+    gap: 2.5vw;
     position: relative;
 }
 
 .five-mobile-carousel-buttons {
     display: flex;
     justify-content: center;
-    gap: 1vw;
+    gap: 2.5vw;
 }
 .carousel-button {
-    width: 2vw;
-    height: 2vw;
+    width: 7.5vw;
+    height: 7.5vw;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -1184,10 +1215,6 @@ input::placeholder {
     border: none;
     border-radius: 999px;
     cursor: pointer;
-    transition: background-color 0.25s ease;
-}
-.carousel-button:hover {
-    background-color: rgba(255, 255, 255, 0.15);
 }
 .carousel-button:disabled {
     opacity: 0.5;
@@ -1195,8 +1222,188 @@ input::placeholder {
     background-color: rgba(255, 255, 255, 0.1);
 }
 .carousel-button-icon {
-    width: 35%;
-    height: 35%;
+    width: 2.5vw;
+    height: 2.5vw;
+}
+
+/* 7 */
+
+.seven {
+    display: none;
+}
+
+.seven-mobile {
+    height: fit-content;
+    width: 100%;
+    padding: 0 5vw;
+    gap: 2.5vw;
+    display: flex;
+}
+
+.seven-content {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    overflow: visible;
+    padding-top: 25vw;
+    gap: 5vw;
+}
+
+.seven-mobile-subtitle {
+    text-align: center;
+}
+
+.seven-content-column {
+    width: 100%;
+    height: fit-content;
+    display: flex;
+    flex-direction: column;
+    gap: 2.5vw;
+}
+
+.seven-mobile-item {
+    width: 100%;
+    height: fit-content;
+    padding: 10vw;
+    overflow: hidden;
+    border-radius: 15px;
+    background-color: rgba(255, 255, 255, 0.075);
+}
+
+.seven-mobile-item-content {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 2.5vw;
+    position: relative;
+}
+
+.seven-mobile-item-imageframe {
+    width: 100%;
+    height: auto;
+    overflow: hidden;
+    border-radius: 15px;
+}
+
+.seven-image {
+    width: 100%;
+    height: auto;
+    object-fit: contain;
+}
+
+/* 8 */
+
+.eight {
+    height: fit-content;
+    padding-bottom: 0;
+}
+
+.eight-content {
+    gap: 2.5vw;
+    padding: 25vw 0;
+}
+
+.eight-slider-item {
+    height: 30vw;
+    width: 30vw;
+    margin-right: 2.5vw;
+    padding: 5vw;
+}
+
+.slider-left-fade {
+    width: 10vw;
+}
+.slider-right-fade {
+    width: 10vw;
+}
+
+/* 9 */
+
+.nine {
+    display: none;
+}
+
+.nine-mobile {
+    display: flex;
+    flex-direction: column;
+    padding: 0 5vw;
+    padding-top: 25vw;
+    height: fit-content;
+}
+
+.nine-content {
+    display: flex;
+    flex-direction: column;
+    gap: 5vw;
+    padding: 25vw 0;
+}
+
+.form-mobile-text-center {
+    text-align: center;
+}
+
+.form-divider {
+    width: 100%;
+    height: 1px;
+    background-color: #ffffff35;
+}
+
+input {
+    height: 20vw;
+    font-size: 5vw;
+    padding-left: 2.5vw;
+}
+
+.form-button {
+    height: 7.5vw;
+    padding-right: 2.5vw;
+    margin-top: 5vw;
+}
+
+.form-contact-box {
+    width: 100%;
+    height: fit-content;
+    padding: 10vw;
+    display: flex;
+    flex-direction: column;
+    border-radius: 15px;
+    background-color: rgba(255, 255, 255, 0.075);
+}
+
+.form-contact-box {
+    display: flex;
+    flex-direction: column;
+    gap: 2.5vw;
+}
+
+.form-contact-box-content {
+    display: flex;
+    flex-direction: column;
+    gap: 2.5vw;
+}
+
+.nine-content-left-item-column {
+    gap: 1vw;
+}
+
+/* FOOTER */
+
+.footer {
+    width: fit-content;
+    width: 100%;
+    display: flex;
+    padding: 25vw 5vw;
+    padding-bottom: 10vw;
+}
+
+.footer-content {
+    gap: 0;
+}
+
+.footer-title {
+    font-size: 12.5vw;
 }
     
 }
