--- a/app/Main/main.css
+++ b/app/Main/main.css
@@ -181,6 +181,10 @@
     pointer-events: all;
 }
 
+.two-mobile {
+    display: none;
+}
+
 .two-border {
     width: 85vw;
     height: 1px;
@@ -982,10 +986,19 @@ input::placeholder {
 /* 2 */
 
 .two {
+    display: none;
+}
+
+.two-mobile {
     height: fit-content;
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    position: relative;
     padding: 25vw 0;
     gap: 25vw;
+    overflow: hidden;
+    pointer-events: all;
 }
 
 .two-border {
@@ -1045,12 +1058,12 @@ input::placeholder {
     height: 100vw;
     display: flex;
     flex-direction: row;
-    transform: rotate(27.5deg) translateY(0) translateX(2.5vw);
+    transform: rotate(0) translateY(0) translateX(0);
 }
 
 .two-carousel {
     overflow: hidden;
-    width: 50%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     height: fit-content;
