--- a/app/Main/main.css
+++ b/app/Main/main.css
@@ -197,7 +197,7 @@
     flex-direction: row;
     justify-content: space-between;
     width: 100%;
-    height: 90vh;
+    height: 100vh;
     color: white;
     gap: 0;
     padding: 0 7.5vw;
@@ -672,7 +672,7 @@
     height: fit-content;
     position: relative;
     overflow: visible;
-    padding-bottom: 7.5vh;
+    padding-bottom: 0vh;
 }
 
 .eight-content {
@@ -680,7 +680,7 @@
     flex-direction: column;
     gap: 5vh;
     padding: 15vh 0;
-    padding-top: 7.5vh;
+    padding-top: 5vh;
 }
 
 .eight-slider-content {
@@ -772,7 +772,7 @@
 
 .nine {
     padding: 0 7.5vw;
-    height: 100vh;
+    height: fit-content;
     position: relative;
     overflow: hidden;
     padding-bottom: 7.5vh;
@@ -881,7 +881,7 @@ input::placeholder {
     width: fit-content;
     width: 100%;
     display: flex;
-    padding: 15vh 7.5vw;
+    padding: 0 7.5vw;
     padding-bottom: 5vh;
 }
 
@@ -1136,7 +1136,7 @@ input::placeholder {
 }
 
 .four-content {
-    gap: 10vw;
+    gap: 5vw;
 }
 
 .four-textbox {
