--- a/app/globals.css
+++ b/app/globals.css
@@ -177,6 +177,21 @@ body {
   justify-content: center;
   z-index: 1000;
   background-color: #010101;
+  opacity: 1;
+  animation: fadeOut 0.5s ease 3.5s forwards;
+}
+
+@keyframes fadeOut {
+  0% {
+    opacity: 1;
+  }
+  99% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 0;
+    display: none;
+  }
 }
 
 .loading-video-content {
