--- a/app/Main/main.css
+++ b/app/Main/main.css
@@ -1291,11 +1291,15 @@ input::placeholder {
 
 .seven-mobile-item {
     width: 100%;
-    height: 75vh;
+    height: 57.5vh;
     padding: 10vw;
     overflow: hidden;
     border-radius: 15px;
     background-color: rgba(255, 255, 255, 0.075);
+}
+
+.seven-mobile-item-big {
+    height: 75vh;
 }
 
 .seven-mobile-item-content {
@@ -1304,6 +1308,7 @@ input::placeholder {
     display: flex;
     flex-direction: column;
     gap: 2.5vw;
+    justify-content: space-between;
     position: relative;
 }
 
@@ -1312,6 +1317,7 @@ input::placeholder {
     height: auto;
     overflow: hidden;
     border-radius: 15px;
+    background-color: white;
 }
 
 .seven-image {
