--- a/app/globals.css
+++ b/app/globals.css
@@ -178,10 +178,10 @@ body {
   z-index: 1000;
   background-color: #010101;
   opacity: 1;
-  animation: fadeOut 0.5s ease 3.5s forwards;
+  /* animation: fadeOut 0.5s ease 3.5s forwards; */
 }
 
-@keyframes fadeOut {
+/* @keyframes fadeOut {
   0% {
     opacity: 1;
   }
@@ -192,7 +192,7 @@ body {
     opacity: 0;
     display: none;
   }
-}
+} */
 
 .loading-video-content {
   width: 50%;
