--- a/app/globals.css
+++ b/app/globals.css
@@ -449,13 +449,8 @@ body {
 @media (max-width: 768px) {
 
 .experience {
-  /* width: 100%;
-  height: 100vh;
-  position: fixed;
-  top: 0;
-  pointer-events: none !important;
-  z-index: 5; */
-  display: none;
+  height: 200vw;
+  /* display: none; */
 }
 
 .cursor {
