--- a/app/Main/main.css
+++ b/app/Main/main.css
@@ -740,7 +740,7 @@
     height: 15vw;
     width: 15vw;
     margin-right: 5vw;
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0.075);
     padding: 2.5vw;
     border-radius: 100%;
 }
@@ -1302,7 +1302,7 @@ input::placeholder {
 
 .seven-mobile-item {
     width: 100%;
-    height: 57.5vh;
+    height: 150vw;
     padding: 10vw;
     overflow: hidden;
     border-radius: 15px;
@@ -1325,7 +1325,7 @@ input::placeholder {
 
 .seven-mobile-item-imageframe {
     width: 100%;
-    height: auto;
+    height: 100%;
     overflow: hidden;
     border-radius: 15px;
     background-color: white;
@@ -1333,7 +1333,7 @@ input::placeholder {
 
 .seven-image {
     width: 100%;
-    height: auto;
+    height: 100%;
     object-fit: contain;
 }
 
