--- a/app/Main/main.css
+++ b/app/Main/main.css
@@ -490,7 +490,7 @@
 
 .five-card-image {
     width: 100%;
-    height: 100%;
+    height: 40vh;
     border-radius: 15px;
     overflow: hidden;
     background-color: black;
@@ -620,7 +620,7 @@
 }
 
 .seven-border {
-    height: 310vh;
+    height: 235vh;
     width: 1px;
     background-color: #ffffff35;
     margin-top: 5vh;
@@ -637,7 +637,7 @@
 
 .seven-content-left-imagebox {
     width: 100%;
-    height: 100vh;
+    height: 75vh;
     position: relative;
     border-radius: 25px;
     overflow: hidden;
@@ -738,17 +738,17 @@
 }
 
 .eight-slider-item {
-    height: 15vw;
-    width: 15vw;
+    /* height: 15vw;
+    width: 15vw; */
     margin-right: 5vw;
-    background-color: rgba(255, 255, 255, 0.075);
-    padding: 2.5vw;
-    border-radius: 100%;
+    /* background-color: rgba(255, 255, 255, 0.075); */
+    /* padding: 2.5vw;
+    border-radius: 100%; */
 }
 
 .eight-slider-item-image {
-    height: 100%;
-    width: 100%;
+    height: 7.5vh;
+    width: fit-content;
     object-fit: contain;
     opacity: 1;
 }
@@ -780,7 +780,7 @@
     height: fit-content;
     position: relative;
     overflow: hidden;
-    padding-bottom: 7.5vh;
+    /* padding-bottom: 7.5vh; */
     padding-top: 15vh;
 }
 
@@ -1449,10 +1449,17 @@ input::placeholder {
 }
 
 .eight-slider-item {
-    height: 30vw;
-    width: 30vw;
-    margin-right: 2.5vw;
-    padding: 5vw;
+    /* height: 30vw;
+    width: 30vw; */
+    margin-right: 10vw;
+    /* padding: 5vw; */
+}
+
+.eight-slider-item-image {
+    height: 10vw;
+    width: fit-content;
+    object-fit: contain;
+    opacity: 1;
 }
 
 .slider-left-fade {
@@ -1473,6 +1480,7 @@ input::placeholder {
     flex-direction: column;
     padding: 0 5vw;
     padding-top: 25vw;
+    padding-bottom: 10vw;
     height: fit-content;
     width: 100%;
     overflow: hidden;
