--- a/app/Main/main.css
+++ b/app/Main/main.css
@@ -793,6 +793,7 @@
     flex-direction: row;
     gap: 10vw;
     padding: 15vh 0;
+    padding-bottom: 7.5vh;
 }
 
 .nine-content-left {
@@ -887,16 +888,14 @@ input::placeholder {
     width: 100%;
     display: flex;
     padding: 0 7.5vw;
-    padding-bottom: 5vh;
+    padding-bottom: 7.5vh;
 }
 
 .footer-content {
     width: 100%;
     height: 100%;
     display: flex;
-    flex-direction: column;
     justify-content: space-between;
-    gap: 10vh;
 }
 
 .footer-top {
@@ -1558,7 +1557,7 @@ input {
     width: fit-content;
     width: 100%;
     display: flex;
-    padding: 25vw 5vw;
+    padding: 0 5vw;
     padding-bottom: 10vw;
 }
 
