--- a/app/Main/main.css
+++ b/app/Main/main.css
@@ -275,7 +275,27 @@
     height: 100vh;
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
     transform: rotate(27.5deg) translateY(-30vh) translateX(2.5vw);
+}
+
+.two-content-right-content-row {
+    width: 33%;
+    height: 100%;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.two-content-right-content-row-content {
+    /* position: absolute;
+    bottom: 0;
+    left: 0; */
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: fit-content;
 }
 
 .two-carousel {
