--- a/app/Main/main.css
+++ b/app/Main/main.css
@@ -289,9 +289,6 @@
 }
 
 .two-content-right-content-row-content {
-    /* position: absolute;
-    bottom: 0;
-    left: 0; */
     display: flex;
     flex-direction: column;
     width: 100%;
@@ -314,9 +311,9 @@
 }
 
 .two-item {
-    flex: 0 0 50vh;
-    height: 55vh;
-    padding: 2vh 0;
+    display: flex;
+    height: auto;
+    padding: 0.5vw 0;
     cursor: pointer;
     transition: background-color 0.35s ease;
 }
@@ -1024,10 +1021,6 @@ input::placeholder {
 /* 2 */
 
 .two {
-    display: none;
-}
-
-.two-mobile {
     height: fit-content;
     width: 100%;
     display: flex;
@@ -1092,50 +1085,28 @@ input::placeholder {
     pointer-events: none;
 }
 
+.two-content-right-content-row {
+    width: 33%;
+    height: 100%;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.two-content-right-content-row-content {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: fit-content;
+}
+
 .two-content-right-content {
     width: 100%;
     height: 100vw;
     display: flex;
     flex-direction: row;
     transform: rotate(27.5deg) translateY(0) translateX(2.5vw);
-}
-
-.two-carousel {
-    overflow: hidden;
-    width: 50%;
-    display: flex;
-    flex-direction: column;
-    height: fit-content;
-}
-
-.two-carousel-hidden {
-    display: none;
-}
-
-.two-row {
-    flex-direction: column;
-    height: 300vw;
-}
-
-.two-item {
-    flex: 0 0 50vw;
-    height: 100vw;
-    padding: 0;
-    cursor: pointer;
-    transition: background-color 0.35s ease;
-}
-
-.two-mobile-slider-item {
-    /* height: 30vw;
-    width: 30vw; */
-    margin-right: 0vw;
-    /* padding: 5vw; */
-}
-
-.two-item-image {
-    width: auto;
-    height: 100%;
-    object-fit: contain;
 }
 
 .bottom-fade {
