--- a/app/Main/main.css
+++ b/app/Main/main.css
@@ -519,7 +519,7 @@
 .five-card-image-img {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: contain;
 }
 
 .five-card-invisible {
