--- a/app/Main/main.css
+++ b/app/Main/main.css
@@ -1265,6 +1265,12 @@ input::placeholder {
     height: 2.5vw;
 }
 
+.five-card-image-img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
 /* 7 */
 
 .seven {
