--- a/app/globals.css
+++ b/app/globals.css
@@ -619,16 +619,32 @@ body {
 }
 
 .loading-video-bottom-fade {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
   height: 10vw;
 }
 .loading-video-top-fade {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
   height: 10vw;
 }
 .loading-video-left-fade {
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 10vw;
+  height: 100%;
 }
 .loading-video-right-fade {
+  position: absolute;
+  top: 0;
+  right: 0;
   width: 10vw;
+  height: 100%;
 }
 
 .loading-video-content-video {
