--- a/app/Main/main.css
+++ b/app/Main/main.css
@@ -268,7 +268,18 @@
     position: absolute;
     top: 0;
     right: 0;
+
+    background-color: #010101;
+
+    /* Transparent fade effect on all sides */
+    mask-image: linear-gradient(to top, transparent, #010101 15%),
+                linear-gradient(to bottom, transparent, #010101 15%),
+                linear-gradient(to left, transparent, #010101 15%),
+                linear-gradient(to right, transparent, #010101 15%);
+    mask-composite: intersect;
+    -webkit-mask-composite: destination-in;
 }
+
 
 .two-content-right-content {
     width: 100%;
@@ -1084,22 +1095,7 @@ input::placeholder {
     height: 75vw;
     position: relative;
     pointer-events: none;
-}
-
-.two-content-right-content-row {
-    width: 33%;
-    height: 100%;
-    position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.two-content-right-content-row-content {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    height: fit-content;
+    overflow: hidden;
 }
 
 .two-content-right-content {
@@ -1121,6 +1117,22 @@ input::placeholder {
 }
 .right-fade {
     width: 10vw;
+}
+
+.two-content-right-content-row {
+    width: 33%;
+    height: 100%;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.two-content-right-content-row-content {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: fit-content;
 }
 
 /* 3 */
@@ -1178,6 +1190,8 @@ input::placeholder {
     width: 100%;
     height: 25vw;
     background-color: rgba(255, 255, 255, 0.075);
+    /* justify-content: flex-start;
+    padding-left: 10vw; */
 }
 
 .four-divider {
