--- a/app/globals.css
+++ b/app/globals.css
@@ -231,6 +231,16 @@ body {
   justify-content: center;
   position: relative;
   overflow: hidden;
+
+  background-color: #010101;
+
+  /* Transparent fade effect on all sides */
+  mask-image: linear-gradient(to top, transparent, #010101 15%),
+              linear-gradient(to bottom, transparent, #010101 15%),
+              linear-gradient(to left, transparent, #010101 15%),
+              linear-gradient(to right, transparent, #010101 15%);
+  mask-composite: intersect;
+  -webkit-mask-composite: destination-in;
 }
 
 .loading-video-bottom-fade {
